--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
 }
 
 .App:after {
@@ -15,4 +16,9 @@
   height: 100%;
   opacity : 0.2;
   z-index: -1;
+}
+
+#background-credit {
+  margin-top: 15px;
+  font-size: 13px;
 }
