--- a/src/business-logic/Textarea.css
+++ b/src/business-logic/Textarea.css
@@ -1,5 +1,13 @@
 .Textarea > textarea {
-  resize: none;  
-  width: 50vw;
-  height: 75vh;
+  resize: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  width: 80vw;
+  height: 50vh;
+}
+
+@media only screen and (min-width: 600px) {
+  .Textarea > textarea {
+    width: 50vw;
+  }
 }
